# LiveStream

AndroidPublisher/rtmplive/src/main/cpp/: CMakeLists.txt  Rtmp.cpp  Rtmp.h
AndroidPublisher/sample/: build.gradle
AndroidPublisher/sample/src/main/java/com/blueberry/sample/: MainActivity.java
